# cascadeDetector

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_test.yml
examples/: CMakeLists.txt  example.cpp  paths_examples.hpp
examples/private/: paths_examples.hpp.in
examples/scripts/: repair_corrupted_images.sh
include/: detector.functions.hpp  detector.hpp
include/details/: variables.hpp
scr/: CMakeLists.txt  detector.cpp  detector.functions.cpp
tests/: CMakeLists.txt  paths_tests.hpp  test.detector.cpp  test.detector.functions.cpp
tests/priv/: paths_tests.hpp.in
tests/test_files/haarcascade/: haarcascade_frontalcatface_extended.xml
